vault/k8s/deploy/vault-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-ingress
  namespace: vault
  annotations:
    cert-manager.io/cluster-issuer: prod-letsencrypt # Reference to ClusterIssuer
    nginx.ingress.kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - vault.eks.subspace.network
    secretName: vault-tls-secret # This secret will be created automatically by cert-manager
  rules:
  - host: "vault.eks.subspace.network"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: vault-ui
            port:
              number: 8200
